tests/errors/invoke-undefined-port.expect
---CODE---
1
---STDERR---
Error: tests/errors/invoke-undefined-port.futil
16 |    invoke f(b = 32'd10)();
   |    ^^^^^^^^^^^^^^^^^^^^^^^ Malformed Structure: cell `f` (which is an instance of foo) does not have port named `b`
